Basic logging for recommender api. Return books as jsons with info

--- a/recommender/Dockerfile
+++ b/recommender/Dockerfile
@@ -9,6 +9,6 @@ COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 EXPOSE 5000
 COPY . .
-COPY index.html /templates/index.html
+#COPY index.html /templates/index.html
 #CMD ["python", "./api.py"]
 CMD ["flask", "run", "--debug"]
