--- a/webserver/Dockerfile
+++ b/webserver/Dockerfile
@@ -1,14 +1,12 @@
 FROM python:3.10-alpine
-# WORKDIR /code
 
 ENV FLASK_APP=webserver.py
 ENV FLASK_RUN_HOST=0.0.0.0
 
-#RUN apk add --no-cache gcc musl-dev linux-headers
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
-EXPOSE 5000
+EXPOSE 80
 COPY . .
-#COPY index.html /templates/index.html
-#CMD ["python", "./api.py"]
-CMD ["flask", "run", "--debug"]
+WORKDIR /
+
+CMD ["gunicorn", "--bind", "0.0.0.0:80", "webserver:app"]
