--- a/src/compose.yaml
+++ b/src/compose.yaml
@@ -7,6 +7,7 @@ services:
         target: "/opt/data"
     environment:
       # DATA_DIR_URL: "/opt/data"
+      RECOMMENDER_PORT: 8080
       USERS_DATA_URL: "/opt/data/Users.csv"
       RATINGS_DATA_URL: "/opt/data/trans_ratings.csv"
       BOOKS_DATA_URL:  "/opt/data/trans_books.csv"
@@ -18,7 +19,7 @@ services:
     build: "./gateway"
     environment:
       recommender_service_url: 'recommender_service'
-      recommender_service_port: 5000
+      recommender_service_port: 8080
   webserver:
     build: "./webserver"
     environment:
