--- a/src/recommender_service/Dockerfile
+++ b/src/recommender_service/Dockerfile
@@ -2,10 +2,11 @@ FROM python:3.10-alpine
 
 ENV FLASK_APP=model_api.py
 ENV FLASK_RUN_HOST=0.0.0.0
+ENV FLASK_RUN_PORT=8080
+
 
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
-EXPOSE 5000
 COPY . .
 
 CMD ["flask", "run", "--debug"]
